--- a/app/src/main/res/layout/activity_subject.xml
+++ b/app/src/main/res/layout/activity_subject.xml
@@ -30,7 +30,9 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"/>
+                app:layout_collapseMode="parallax"
+                android:adjustViewBounds="true"
+                android:src="@drawable/placeholder"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
