--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="80dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/thumbnail"
             android:layout_width="100dp"
             android:layout_height="80dp"
