--- a/app/src/main/res/layout/activity_feeds_list.xml
+++ b/app/src/main/res/layout/activity_feeds_list.xml
@@ -1,7 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/activity_vertical_margin">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:padding="@dimen/activity_vertical_margin">
 
     <view
         android:id="@+id/recycler_view"
@@ -11,4 +11,4 @@
         android:layout_centerInParent="true"
         android:contextClickable="true"
         android:clickable="true"/>
-</RelativeLayout>
+</LinearLayout>
