--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -27,7 +27,7 @@
             android:padding="8dp"
             android:text="dafdafda"
             android:textColor="#222"
-            android:textSize="15dp" />
+            android:textSize="20sp"/>
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
